# opensolid

./: .clang-format  .gitignore  .hlint.yaml  CLAUDE.md  README.md  TODO.txt  cabal.project  cabal.project.freeze  flake.nix  fourmolu.yaml  hie.yaml  opensolid-hs.cabal  opensolid.cabal  package.yaml  pyrightconfig.json  stack.yaml
executables/: executables.cabal
executables/arc-length/: Main.hs
executables/blended-surface/: Main.hs
executables/blending-curves/: Main.hs
executables/body3d-meshing/: Main.hs
executables/bytecode-evaluation/: Main.hs
executables/croissant/: Main.hs
executables/expression-evaluation/: Main.hs
executables/funky-moulding/: Main.hs
executables/gear-generation/: .gitignore  Main.hs
executables/hermite-surface/: Main.hs
executables/i-beam/: .gitignore  Main.hs  mesh.glb
executables/medial-axis/: Main.hs
executables/oblate-spheroid/: Main.hs
executables/phone-holder/: Edge2D.hs  Edge3D.hs  Main.hs  Path2D.hs  Path3D.hs
executables/piecewise-curve/: Main.hs
executables/raindrop/: Main.hs
executables/region-triangulation/: Main.hs
executables/revolved-normals/: Main.hs  mesh1.stl  mesh3.stl  mesh6.stl  mesh8.stl
executables/sandbox/: .gitignore  Main.hs
executables/simple-step-file/: Main.hs
executables/sphere/: Main.hs
executables/surface3d-meshing/: Main.hs
executables/test-server/: Main.hs
executables/utils/: Utils.hs
opensolid/: .stan.toml  Setup.hs  opensolid.cabal
opensolid-api/: opensolid-api.cabal
opensolid-api/src/: API.hs  All.hs  Api.hs  Codegen.hs  Internal.hs  OpenSolidAPI.hs  Pointers.hs
opensolid-api/src/API/: AbsFunction.hs  Argument.hs  BinaryOperator.hs  Class.hs  ComparisonFunction.hs  Constant.hs  Constraint.hs  Constructor.hs  Docs.hs  EqualityFunction.hs  Function.hs  ImplicitArgument.hs  MemberFunction.hs  NegationFunction.hs  NegationOperator.hs  PostOperator.hs  PreOperator.hs  Property.hs  Space.hs  StaticFunction.hs  Upcast.hs
opensolid-api/src/OpenSolid/: API.hs
opensolid-api/src/OpenSolidAPI/: Axis2d.hs  Basis2d.hs  Bounds2d.hs  Direction2d.hs  Frame2d.hs  Point2d.hs  Range.hs  Vector2d.hs
opensolid-components/: opensolid-components.cabal
opensolid-components/src/OpenSolid/: SpurGear.hs
opensolid-core/: Setup.hs  opensolid-core.cabal
opensolid-core/src/: OpenSolid.hs
opensolid-core/src/OpenSolid/: Angle.hs  Ap242.hs  Arc2D.hs  Arc2d.hs  Arc3D.hs  ArcLength.hs  Area.hs  Arithmetic.hs  Array.hs  Array2D.hs  Array2d.hs  Ast.hs  Axis.hs  Axis2D.hs  Axis2d.hs  Axis3D.hs  Axis3d.hs  Basis2d.hs  Basis2d.hs-boot  Basis3d.hs  Basis3d.hs-boot  Bezier.hs  BezierCurve2d.hs  Binary.hs  Bisection.hs  Body3D.hs  Body3d.hs  Bool.hs  Bootstrap.hs  Bounded.hs  Bounded.hs-boot  Bounded2D.hs  Bounded2d.hs  Bounded3D.hs  Bounded3d.hs  Bounds.hs  Bounds.hs-boot  Bounds2D.hs  Bounds2D.hs-boot  Bounds2d.hs  (+334 more)
opensolid-core/test/: Main.hs  Test.hs
opensolid-core/test/Tests/: Arc2d.hs  Array.hs  Bezier.hs  Body3D.hs  Bounds.hs  Bounds2D.hs  Bounds2d.hs  Bounds3D.hs  Bounds3d.hs  Curve.hs  Curve1D.hs  Curve1d.hs  Curve2D.hs  Curve2d.hs  Curve3D.hs  Direction2D.hs  Direction2d.hs  DivMod.hs  Estimate.hs  Float.hs  Interval.hs  List.hs  Map.hs  Matching.hs  NewtonRaphson.hs  NonEmpty.hs  Number.hs  Parameter.hs  Piecewise.hs  PiecewiseCurve.hs  Polygon2d.hs  Qty.hs  Quantity.hs  Random.hs  Region2D.hs  Region2d.hs  Set2D.hs  Set2d.hs  Stream.hs  SurfaceFunction.hs  (+7 more)
opensolid-ffi/: .gitignore  opensolid-ffi.cabal  opensolid-ffi.def  opensolid.py  test.py
opensolid-ffi/generate-def-file/: Main.hs
opensolid-ffi/python/: Main.hs  PythonAST.hs
opensolid-ffi/src/: FFI.hs  FFIWrapper.hs  ForeignExports.hs  OpenSolidFFI.hs  wrapper.c
opensolid-ffi/src/OpenSolidFFI/: Point2d.hs
opensolid-http/: opensolid-http.cabal
opensolid-http/src/Http/: Server.hs
opensolid-jit/: Cargo.toml
opensolid-jit/src/: bounds.rs  bounds_function_compiler.rs  builtins.rs  expression.rs  function_compiler.rs  jit.rs  lib.rs  module_compiler.rs  value_function_compiler.rs
opensolid-json/: README.md  opensolid-json.cabal
opensolid-json/src/OpenSolid/: Json.hs
opensolid-python/: .gitignore  check.py  opensolid-python.cabal  opensolid.py  test.py
opensolid-python/doc-generation/: README.md  pyproject.toml
opensolid-python/doc-generation/src/: conf.py
opensolid-python/lib/: .gitignore  README.rst  check.py  check_operators.py  coeffs.py  fillet.serialized  fillet.xml  pyproject.toml  setup.py
opensolid-python/lib/examples/: fillet.py  ibeam.py
opensolid-python/lib/sandbox/: lhopital.py  sphere.py  step.py
opensolid-python/opensolid/: __init__.py
opensolid-python/src/: CTypes.hs  Class.hs  Constructor.hs  Function.hs  Main.hs  MemberFunction.hs  Python.hs  PythonAST.hs  StaticFunction.hs  Type.hs  TypeRegistry.hs
opensolid-python/src/Python/: AbsFunction.hs  Class.hs  ComparisonFunction.hs  Constant.hs  Constructor.hs  EqualityFunction.hs  FFI.hs  Function.hs  HashFunction.hs  MemberFunction.hs  NegationFunction.hs  NegationOperator.hs  PostOperator.hs  PreOperator.hs  Property.hs  StaticFunction.hs  Type.hs  Upcast.hs
opensolid/src/: Angle.hs  Arc2d.hs  Arc2d.hs-boot  Area.hs  Arithmetic.hs  Array.hs  Axis2d.hs  Axis2d.hs-boot  Axis3d.hs  Axis3d.hs-boot  Basics.hs  Basis2d.hs  Basis2d.hs-boot  Basis3d.hs  Basis3d.hs-boot  BezierCurve2d.hs  BezierCurve2d.hs-boot  Bisection.hs  Bool.hs  Bounded.hs  BoundingBox2d.hs  BoundingBox2d.hs-boot  BoundingBox3d.hs  BoundingBox3d.hs-boot  Bounds.hs  Bounds2d.hs  Bounds2d.hs-boot  Bounds3d.hs  Bounds3d.hs-boot  Coalesce.hs  Color.hs  Colour.hs  Composition.hs  Concatenate.hs  Concatenation.hs  Console.hs  CoordinateSystem.hs  CubicSpline2d.hs  Curve1d.hs  Curve1d.hs-boot  (+129 more)
opensolid/src/Arithmetic/: Unboxed.hs
opensolid/src/Curve1d/: Integral.hs  Root.hs  Zero.hs  Zeros.hs
opensolid/src/Curve2d/: Derivatives.hs  Extension.hs  FindPoint.hs  Internal.hs  Intersection.hs  IntersectionPoint.hs  (+6 more)
opensolid/test/: Main.hs  Test.hs
sandbox/: Main.hs  sandbox.cabal
sandbox/src/: Main.hs
test-server/: test-server.cabal
test-server/src/: Main.hs
(+765 files in other folders)
