cabal-version:      2.4
name:               opensolid-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable opensolid-hs
    ghc-options:
        "-Werror"
        "-dcore-lint"
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        text ^>=2.0.1,
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        OpenSolid
        Show
        Debug
        String
        Maybe
        Result
        List
        Units
        Quantity
        Length
        Area
        Volume
        Range
        Range.Unsafe
        Interval
        Direction2d
        Direction2d.Unsafe
        Direction3d
        Direction3d.Unsafe
        Vector2d
        Vector3d
        Point2d
        Point3d
        VectorBox3d
        BoundingBox3d
        Expression1d
        Expression1d.Root
        Expression3d
        Curve3d
        Line3d
        QuadraticSpline3d
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        UndecidableInstances
        RebindableSyntax
        MonoLocalBinds
        TypeFamilies
        StandaloneDeriving
        ExistentialQuantification
        StrictData
