cabal-version:      2.4
name:               opensolid-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable opensolid-hs
    ghc-options:
        "-Wall"
        "-Werror"
        "-dcore-lint"
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        text ^>=2.0.1,
        text-show ^>=3.10
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Generic
        OpenSolid
        Float
        Units
        Debug
        Text
        Maybe
        Result
        List
        Qty
        Bounds
        Bounded
        Angle
        Length
        Area
        Volume
        Range
        Direction2d
        Direction3d
        Vector2d
        Vector3d
        Point2d
        Point3d
        VectorBox2d
        VectorBox3d
        BoundingBox3d
        Curve1d
        Curve1d.Root
        Curve1d.Region
        VectorCurve2d
        VectorCurve3d
        Curve3d
        Line3d
        QuadraticSpline3d
        Script
    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        UndecidableInstances
        RebindableSyntax
        MonoLocalBinds
        TypeFamilies
        StandaloneDeriving
        ExistentialQuantification
        StrictData
        FunctionalDependencies
        GeneralizedNewtypeDeriving
        QualifiedDo
        OverloadedLabels
        DataKinds
        ScopedTypeVariables
        GADTs
        RoleAnnotations
        RankNTypes
        LexicalNegation
        ImportQualifiedPost
        TypeOperators
