cabal-version: 2.2

name:           opensolid
version:        0.1.0.0
synopsis:       Open-source geometric modelling framework
description:    Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category:       Geometry
homepage:       https://github.com/ianmackenzie/opensolid#readme
bug-reports:    https://github.com/ianmackenzie/opensolid/issues
author:         Ian Mackenzie
maintainer:     ian.e.mackenzie@gmail.com
copyright:      2023 Ian Mackenzie
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: Haskell2010
  build-depends:
      array
    , base
    , containers
    , random
    , text
  ghc-options:
      -Wall
      -Werror
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-signatures
      -Wmissing-exported-signatures
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wsafe
      -dcore-lint
      -threaded
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
      MultiParamTypeClasses
      FlexibleInstances
      FlexibleContexts
      UndecidableInstances
      RebindableSyntax
      MonoLocalBinds
      KindSignatures
      StandaloneDeriving
      StrictData
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      DataKinds
      ScopedTypeVariables
      GADTs
      RoleAnnotations
      LexicalNegation
      ImportQualifiedPost
      StandaloneKindSignatures
      UndecidableSuperClasses
      ImplicitParams
      ConstraintKinds
      PatternSynonyms
      BlockArguments
      OverloadedLabels
      RankNTypes
      QualifiedDo
      TypeFamilies
      TypeOperators
      OverloadedRecordDot
      MagicHash
      TupleSections
      DeriveAnyClass
      DerivingStrategies
      ViewPatterns
      LambdaCase

common app
  ghc-options: -rtsopts -with-rtsopts=-N
  build-depends: opensolid

library
  import: config
  exposed-modules:
      Angle
      Arc2d
      Area
      Arithmetic
      Array
      Axis2d
      Basics
      Bisection
      Bounded
      BoundingBox2d
      BoundingBox3d
      Bounds
      Concatenate
      Console
      CoordinateSystem
      CubicSpline2d
      Curve1d
      Curve1d.Root
      Curve2d
      Curve2d.Intersection
      Curve3d
      Debug
      Direction2d
      Direction3d
      DirectionBox2d
      DirectionCurve2d
      Domain
      DoNotation
      Estimate
      Float
      Frame2d
      Fuzzy
      Generic
      Length
      Line2d
      Line3d
      List
      Maybe
      NonEmpty
      OpenSolid
      Pair
      Parameter1d
      Point2d
      Point3d
      Qty
      QuadraticSpline2d
      QuadraticSpline3d
      Random
      Random.Shuffle
      Range
      Region2d
      Result
      Seq
      Sign
      Stream
      Task
      Text
      Tolerance
      Transform2d
      Try
      Units
      Vector2d
      Vector3d
      VectorBox2d
      VectorBox3d
      VectorCurve2d
      VectorCurve3d
      Volume
  other-modules:
      Curve1d.Integral
      Curve2d.Internal
      Curve2d.Derivatives
      Curve2d.Segment
      VectorCurve2d.DegenerateEndpoint
      VectorCurve2d.Direction
      VectorCurve2d.Magnitude
  hs-source-dirs: src

executable sandbox
  import: config, app
  main-is: Main.hs
  other-modules: Paths_opensolid
  autogen-modules: Paths_opensolid
  hs-source-dirs: sandbox

test-suite opensolid-test
  import: config, app
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Test
      Tests.Arc2d
      Tests.Curve1d
      Tests.Curve2d
      Tests.Direction2d
      Tests.Estimate
      Tests.List
      Tests.NonEmpty
      Tests.Parameter1d
      Tests.Qty
      Tests.Random
      Tests.Range
      Tests.Region2d
      Tests.VectorBox3d
      Paths_opensolid
  autogen-modules: Paths_opensolid
  hs-source-dirs: test
