cabal-version: 2.2
name: executables
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description: Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: GHC2021
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    BlockArguments
    DisambiguateRecordFields
    GADTs
    LexicalNegation
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RebindableSyntax
    TypeApplications

executable sandbox
  import: config
  main-is: Main.hs
  hs-source-dirs: sandbox
  build-depends:
    array,
    base,
    containers,
    opensolid-core,
    random,

executable test-server
  import: config
  main-is: Main.hs
  hs-source-dirs: test-server
  build-depends:
    array,
    base,
    containers,
    opensolid-core,
    opensolid-http,
    random,

executable arc-length
  import: config
  main-is: Main.hs
  hs-source-dirs: arc-length
  build-depends:
    opensolid-core

executable piecewise-curve
  import: config
  main-is: Main.hs
  hs-source-dirs: piecewise-curve
  build-depends:
    opensolid-core

executable medial-axis
  import: config
  main-is: Main.hs
  hs-source-dirs: medial-axis
  build-depends:
    opensolid-core,
    time,

executable region-triangulation
  import: config
  main-is: Main.hs
  hs-source-dirs: region-triangulation
  build-depends:
    opensolid-core

executable surface3d-meshing
  import: config
  main-is: Main.hs
  hs-source-dirs: surface3d-meshing
  build-depends:
    opensolid-core

executable body3d-meshing
  import: config
  main-is: Main.hs
  hs-source-dirs: body3d-meshing
  build-depends:
    opensolid-core
