cabal-version: 2.2
name: opensolid-api
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description: Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

library
  default-language: GHC2021
  build-depends:
    base,
    opensolid-core,
    template-haskell,

  hs-source-dirs: src
  exposed-modules:
    API
    API.AbsFunction
    API.BinaryOperator
    API.ComparisonFunction
    API.Constant
    API.Constraint
    API.EqualityFunction
    API.MemberFunction
    API.NegationFunction
    API.PostOperator
    API.PreOperator
    API.StaticFunction

  other-modules:
    API.Docs

  default-extensions:
    DisambiguateRecordFields
    GADTs
    ImplicitParams
    LambdaCase
    LexicalNegation
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RebindableSyntax
    TemplateHaskell
    ViewPatterns

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -Wno-missed-extra-shared-lib
