cabal-version: 3.8
name: opensolid-api
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description: Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>
category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

library
  default-language: GHC2021
  build-depends:
    base,
    hashable,
    opensolid-components,
    opensolid-core,
    template-haskell,

  hs-source-dirs: src
  exposed-modules:
    OpenSolid.API
    OpenSolid.API.AbsFunction
    OpenSolid.API.Argument
    OpenSolid.API.BinaryOperator
    OpenSolid.API.Class
    OpenSolid.API.ComparisonFunction
    OpenSolid.API.Constant
    OpenSolid.API.Constructor
    OpenSolid.API.EqualityFunction
    OpenSolid.API.Function
    OpenSolid.API.HashFunction
    OpenSolid.API.ImplicitArgument
    OpenSolid.API.MemberFunction
    OpenSolid.API.NegationFunction
    OpenSolid.API.PostOperatorOverload
    OpenSolid.API.PreOperatorOverload
    OpenSolid.API.Property
    OpenSolid.API.StaticFunction
    OpenSolid.API.Upcast

  other-modules:
    OpenSolid.API.Docs

  default-extensions:
    BlockArguments
    DataKinds
    DisambiguateRecordFields
    GADTs
    ImplicitParams
    LambdaCase
    LexicalNegation
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    TemplateHaskell
    ViewPatterns

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wsafe
    -Wno-missed-extra-shared-lib
