cabal-version: 3.8
name: opensolid-core
version: 0.1.0.0
synopsis: Open-source geometric modelling framework
description:
  Please see the README on GitHub at <https://github.com/ianmackenzie/opensolid#readme>

category: Geometry
homepage: https://github.com/ianmackenzie/opensolid#readme
bug-reports: https://github.com/ianmackenzie/opensolid/issues
author: Ian Mackenzie
maintainer: ian.e.mackenzie@gmail.com
copyright: 2023 Ian Mackenzie
license: MPL-2.0
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/ianmackenzie/opensolid

common config
  default-language: GHC2021
  build-depends:
    aeson,
    array,
    async,
    base,
    bytestring,
    colour,
    containers,
    deque,
    directory,
    filepath,
    hashable,
    indexed-traversable,
    random,
    scientific,
    text,
    vector,
    zlib,

  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Widentities
    -Wmissing-signatures
    -Wmissing-exported-signatures
    -Wmissing-home-modules
    -Wsafe
    -Wno-missed-extra-shared-lib
    -Wno-x-data-list-nonempty-unzip
    -fwrite-ide-info
    -hiedir=.hie
    -haddock
    -dcmm-lint

  default-extensions:
    BlockArguments
    CApiFFI
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    GHCForeignImportPrim
    ImplicitParams
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QualifiedDo
    RoleAnnotations
    StrictData
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UndecidableSuperClasses
    UnliftedFFITypes
    ViewPatterns

library
  import: config
  exposed-modules:
    OpenSolid.Angle
    OpenSolid.Arc2d
    OpenSolid.ArcLength
    OpenSolid.Area
    OpenSolid.Arithmetic
    OpenSolid.Array
    OpenSolid.Array2d
    OpenSolid.Axis2d
    OpenSolid.Axis3d
    OpenSolid.Bezier
    OpenSolid.Binary
    OpenSolid.Bisection
    OpenSolid.Body3d
    OpenSolid.Body3d.BoundedBy
    OpenSolid.Bool
    OpenSolid.Bounded2d
    OpenSolid.Bounded3d
    OpenSolid.Bounds
    OpenSolid.Bounds2d
    OpenSolid.Bounds3d
    OpenSolid.Bytecode.Ast
    OpenSolid.Camera3d
    OpenSolid.Circle2d
    OpenSolid.Color
    OpenSolid.CompiledFunction
    OpenSolid.Composition
    OpenSolid.Convention3d
    OpenSolid.Curve
    OpenSolid.Curve.Zero
    OpenSolid.Curve2d
    OpenSolid.Curve2d.IntersectionPoint
    OpenSolid.Curve2d.Intersections
    OpenSolid.Curve2d.MedialAxis
    OpenSolid.Curve2d.OverlappingSegment
    OpenSolid.Curve3d
    OpenSolid.Debug
    OpenSolid.Debug.Plot
    OpenSolid.Desingularization
    OpenSolid.Direction2d
    OpenSolid.Direction3d
    OpenSolid.DirectionBounds2d
    OpenSolid.DirectionBounds3d
    OpenSolid.DirectionCurve2d
    OpenSolid.DirectionCurve3d
    OpenSolid.DirectionSurfaceFunction2d
    OpenSolid.DirectionSurfaceFunction3d
    OpenSolid.DivisionByZero
    OpenSolid.Domain1d
    OpenSolid.Domain2d
    OpenSolid.Duration
    OpenSolid.Estimate
    OpenSolid.Expression
    OpenSolid.Expression.Curve1d
    OpenSolid.Expression.Curve2d
    OpenSolid.Expression.Curve3d
    OpenSolid.Expression.Surface1d
    OpenSolid.Expression.Surface2d
    OpenSolid.Expression.Surface3d
    OpenSolid.Expression.VectorCurve2d
    OpenSolid.Expression.VectorCurve3d
    OpenSolid.Expression.VectorSurface2d
    OpenSolid.Expression.VectorSurface3d
    OpenSolid.FFI
    OpenSolid.Frame2d
    OpenSolid.Frame3d
    OpenSolid.Fuzzy
    OpenSolid.Gltf
    OpenSolid.HigherOrderZero
    OpenSolid.IO
    OpenSolid.IO.Parallel
    OpenSolid.Int
    OpenSolid.InternalError
    OpenSolid.Intersects
    OpenSolid.Json
    OpenSolid.Length
    OpenSolid.Line2d
    OpenSolid.List
    OpenSolid.Map
    OpenSolid.Maybe
    OpenSolid.Mesh
    OpenSolid.Mitsuba
    OpenSolid.Model3d
    OpenSolid.Named
    OpenSolid.NewtonRaphson
    OpenSolid.NonEmpty
    OpenSolid.Number
    OpenSolid.Orientation2d
    OpenSolid.Orientation3d
    OpenSolid.Pair
    OpenSolid.Parameter
    OpenSolid.PbrMaterial
    OpenSolid.Plane3d
    OpenSolid.PlaneOrientation3d
    OpenSolid.Point2D
    OpenSolid.Point3d
    OpenSolid.Polygon2d
    OpenSolid.Polyline2d
    OpenSolid.Polymorphic.Point2d
    OpenSolid.Polymorphic.Vector2d
    OpenSolid.Prelude
    OpenSolid.Primitives
    OpenSolid.Quantity
    OpenSolid.Queue
    OpenSolid.Random
    OpenSolid.Region2d
    OpenSolid.Region2d.BoundedBy
    OpenSolid.Resolution
    OpenSolid.Result
    OpenSolid.Set2d
    OpenSolid.Set3d
    OpenSolid.Sign
    OpenSolid.Solve1d
    OpenSolid.Solve2d
    OpenSolid.Stl
    OpenSolid.Stream
    OpenSolid.Surface
    OpenSolid.Surface2d
    OpenSolid.Surface3d
    OpenSolid.Surface3d.Revolved
    OpenSolid.SurfaceFunction
    OpenSolid.SurfaceFunction.Zeros
    OpenSolid.SurfaceFunction2d
    OpenSolid.SurfaceFunction3d
    OpenSolid.SurfaceParameter
    OpenSolid.SurfaceVertex3d
    OpenSolid.Svg
    OpenSolid.Text
    OpenSolid.Timer
    OpenSolid.Todo
    OpenSolid.Tolerance
    OpenSolid.Transform
    OpenSolid.Transform2d
    OpenSolid.Transform3d
    OpenSolid.Triangle2d
    OpenSolid.Unitless
    OpenSolid.Units
    OpenSolid.UvBounds
    OpenSolid.UvPoint
    OpenSolid.UvSpace
    OpenSolid.Vector2D
    OpenSolid.Vector3d
    OpenSolid.VectorBounds2d
    OpenSolid.VectorBounds3d
    OpenSolid.VectorCurve2d
    OpenSolid.VectorCurve3d
    OpenSolid.VectorSurface2d
    OpenSolid.VectorSurface3d
    OpenSolid.VectorSurfaceFunction2d
    OpenSolid.VectorSurfaceFunction3d
    OpenSolid.Volume
    OpenSolid.World3d

  other-modules:
    OpenSolid.Bytecode.Compile
    OpenSolid.Bytecode.Encode
    OpenSolid.Bytecode.Evaluate
    OpenSolid.Bytecode.Instruction
    OpenSolid.CDT
    OpenSolid.Curve.Bisection
    OpenSolid.HasZero
    OpenSolid.Linearization
    OpenSolid.Lobatto
    OpenSolid.Quadrature
    OpenSolid.Random.Internal
    OpenSolid.SurfaceFunction.Blending
    OpenSolid.SurfaceFunction.Desingularization
    OpenSolid.SurfaceFunction.HorizontalCurve
    OpenSolid.SurfaceFunction.ImplicitCurveBounds
    OpenSolid.SurfaceFunction.Internal
    OpenSolid.SurfaceFunction.PartialZeros
    OpenSolid.SurfaceFunction.Quotient
    OpenSolid.SurfaceFunction.SaddleRegion
    OpenSolid.SurfaceFunction.Subproblem
    OpenSolid.SurfaceFunction.VerticalCurve
    OpenSolid.SurfaceLinearization
    OpenSolid.Text.Parse
    OpenSolid.Unboxed.Math

  hs-source-dirs: src
  cxx-sources:
    src/OpenSolid/Bytecode/bytecode.cpp
    src/OpenSolid/CDT.cpp

  cxx-options:
    -Wall
    -Wextra
    -Werror
    -fPIC
    -std=c++17

  cmm-sources:
    src/OpenSolid/Bytecode/primops.cmm

  build-depends:
    system-cxx-std-lib

test-suite opensolid-core-test
  import: config
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    ansi-terminal,
    opensolid-core,

  other-modules:
    Test
    Tests.Array
    Tests.Bounds
    Tests.Bounds2d
    Tests.Bounds3d
    Tests.Curve
    Tests.Curve2d
    Tests.Direction2d
    Tests.DivMod
    Tests.Estimate
    Tests.List
    Tests.Map
    Tests.NewtonRaphson
    Tests.NonEmpty
    Tests.Number
    Tests.Parameter
    Tests.Quantity
    Tests.Random
    Tests.Region2d
    Tests.Set2d
    Tests.Stream
    Tests.SurfaceFunction
    Tests.Text
    Tests.VectorBounds2d
    Tests.VectorBounds3d
    Tests.VectorCurve2d

  hs-source-dirs: test
